infrastructure/issuing/openshift-resources/issuing-deployment-config.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  generation: 1
  labels:
    app: issuing
  name: issuing
spec:
  replicas: 2
  selector:
    app: issuing
    deploymentconfig: issuing
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: issuing
        deploymentconfig: issuing
    spec:
      containers:
      - image: adunicorn/issuing:latest
        imagePullPolicy: Always
        name: issuing
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          timeoutSeconds: 1
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File

      - env:
        - name: REDIS_REPLICATION_MODE
          value: slave
        - name: REDIS_MASTER_HOST
          value: redis-master
        - name: REDIS_MASTER_PORT_NUMBER
          value: "6379"
        - name: REDIS_MASTER_PASSWORD
          value: redis
        - name: REDIS_PASSWORD
          value: redis
        image: redis:latest
        imagePullPolicy: Always
        name: redis-slave
        ports:
        - containerPort: 6379
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - redis-slave
      from:
        kind: ImageStreamTag
        name: redis:latest
        namespace: issuing
    type: ImageChange
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - issuing
      from:
        kind: ImageStreamTag
        name: issuing:latest
        namespace: issuing
    type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
