infrastructure/issuing/openshift-resources/consumer-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  labels:
    app: issuing
  name: consumer
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    deploymentconfig: issuing
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
