infrastructure/issuing/openshift-resources/pyissuing-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole and manual
  creationTimestamp: null
  labels:
    app: issuing
  name: pyissuing
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: 6379-tcp
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    deploymentconfig: pyissuing
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
