infrastructure/issuing/openshift-resources/rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  ports:
  - name: 4369-tcp
    port: 4369
    protocol: TCP
    targetPort: 4369
  - name: 5671-tcp
    port: 5671
    protocol: TCP
    targetPort: 5671
  - name: 5672-tcp
    port: 5672
    protocol: TCP
    targetPort: 5672
  - name: 15672-tcp
    port: 15672
    protocol: TCP
    targetPort: 15672
  - name: 25672-tcp
    port: 25672
    protocol: TCP
    targetPort: 25672
  selector:
    deploymentconfig: rabbitmq
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
