infrastructure/issuing/openshift-resources/redis-master-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  labels:
    app: redis-master
  name: redis-master
spec:
  ports:
  - name: 6379-tcp
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    deploymentconfig: redis-master
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
