infrastructure/issuing/openshift-resources/pyissuing-minishift-route.yml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  name: pyissuing.192.168.64.11.nip.io
spec:
  host: pyissuing.192.168.64.11.nip.io
  port:
    targetPort: 5000-tcp
  to:
    kind: Service
    name: pyissuing
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2017-09-28T09:46:31Z
      status: "True"
      type: Admitted
    host: pyissuing.192.168.64.11.nip.io
    routerName: router
    wildcardPolicy: None
