infrastructure/issuing/openshift-resources/rabbitmq-route.yml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  name: rabbitmq.apps.adunicorn.local
spec:
  host: rabbitmq.apps.adunicorn.local
  port:
    targetPort: 15672-tcp
  to:
    kind: Service
    name: rabbitmq
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2017-09-28T09:58:16Z
      status: "True"
      type: Admitted
    host: rabbitmq.apps.adunicorn.local
    routerName: router
    wildcardPolicy: None
